# whisper-webui

./: .gitignore  pyproject.toml
